--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,5 +1,21 @@
 // Styling for the services section
-.service-heading {
-  margin: 15px 0;
-  text-transform: none;
+.service-box {
+  max-width: 400px;
+  
+}
+
+#services {
+  background: $brand-background;
+  padding-bottom: 3rem;
+  padding-top: 3rem;
+
+  h3 {
+    font-weight: 600;
+    color: $brand-dark;
+    margin-bottom: 1rem;
+  }
+  img {
+    border-radius: 200px;
+    margin-bottom: 15px;
+  }
 }
