--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,5 @@
 // Variables
 
-// Restated Bootstrap Variables
-
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
@@ -14,4 +12,17 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #fed136 !default;
+$primary: #2ebd7d !default;
+
+$brand-secondary: #008C82;
+$brand-dark: #4A4A4A;
+$brand-grey: #9B9B9B;
+$brand-background: #f9fbfa;
+
+.mb-20 {
+    margin-bottom: 150px;
+}
+
+.grey-background {
+    background: #F9FBFA;
+}
